--- a/Project.toml
+++ b/Project.toml
@@ -6,3 +6,6 @@ version = "0.1.0"
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+
+[compat]
+AbstractTrees = "0.4"
